# OpenMusenet2

./: README.md
Converters/: format_to_midi.ipynb  midiFormater.ipynb
Dataset parser/: midiFormater.ipynb
Notebooks/: mid gen.ipynb  mid_gen.ipynb  midgeneasy.ipynb  midgeneasy_prod.ipynb
Notebooks/Converters/: format to midi.ipynb  midiFormater.ipynb  midi_to_format_single.ipynb
OpenMusenet2/Notebooks/: midgeneasy_prod.ipynb
OpenMusenet3/: OpenMusenet_3_notebook.ipynb  ai.py  alla turca.mid  midi.py  test.mid
OpenMusenet3/src/OpenMusenet3/: __init__.py  ai.py  instrument_guesser.py  midi.py  pyproject.toml  test2.mid  utils.py
OpenMusenet3/src/OpenMusenet3/OpenMusenet3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
OpenMusenet3/src/tests/: AIPiece0.mid  run_basic.py  test.mid  test2.mid  test_ai.py
