[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenMusenet3"
version = "0.0.1"
description = "An AI MIDI (Music) generator."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["AI midi", "musenet", "AI Music"]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "transformers[torch]",
    "mido"
]

[project.urls]
Homepage = "https://github.com/hidude562/OpenMusenet2"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "instrument_guesser*", "midi*", "utils*"]